--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ My hobbies include electronic music and sports. I love taking long walks outdoor
                             <div class="icon"><i class="bi bi-phone"></i></div>
                             <div class="feature-content col">
                                 <h5>Languages,Paradigms and Skills</h5>
-                                <p>Python, C++, Java, C, JavaScript, MySQL, SQL, Assemblyx86, HTML, CSS, JSON, MATLAB, VHDL, CUDA, MPI, OpenMp, Penetration Testing, Cloud Architecture Design</p>
+                                <p>Python, C++, Java, C, JavaScript, MySQL, SQL, Assemblyx86, HTML, CSS, JSON, MATLAB, VHDL, CUDA, MPI, OpenMp, Penetration Testing, Cloud, AWS Cloud Services</p>
                             </div>
                         </div>
                     </div>
@@ -201,7 +201,7 @@ My hobbies include electronic music and sports. I love taking long walks outdoor
                             <div class="icon"><i class="bi bi-columns"></i></div>
                             <div class="feature-content col">
                                 <h5>Interests</h5>
-                                <p>Software Engineering, Software Development, Cyber-Security, Machine Learning, Data Visualization, Buisiness Analytics, Artificial Intelligence, Generative AI, Ideation, Blockchain, Cryptocurrency</p>
+                                <p>Software Engineering, Software Development, Cyber-Security, Machine Learning, Data Visualization, Buisiness Analytics, Artificial Intelligence, Generative AI, Cloud, Blockchain, Cryptocurrency</p>
                             </div>
                         </div>
                     </div>
@@ -212,7 +212,7 @@ My hobbies include electronic music and sports. I love taking long walks outdoor
                                 <h5>Relevant Courses</h5>
                                 <p> Data Structures<br>Advanced Software Engineering<br>Object Oriented Design<br>Operating Systems<br>Security And Protocols for Networking Systems<br>Computer Architecture and Design<br>Optimization Methods
                                     Machine Learning<br>Knowledge Engineering and Artificial Intelligence<br>Algorithms<br>Future Computing Architectures and Program Paradigms<br>High Perfomance Cloud Computing
-                                   <br>Quantum Computing<br>Distributed Systems<br>Data Mining<br>Blockchain</p>
+                                   <br>Quantum Computing<br>Distributed Systems<br>Data Mining<br>Blockchain<br>AWS Cloud Services</p>
                                     
                             </div>
                         </div>
