--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
                             <h6>INTRODUCTION</h6>
                             <h2>I'm Alessandro, a <span class="text-theme">Computer Engineering Student</span></h2>
                             <p align="justify">"I have a master's degree in computer engineering at Università della Campania Luigi Vanvitelli. Throughout my studies, I have been focusing on Machine Learning, Artificial Intelligence, Cybersecurity, Software Development, Cloud, High Perfomance Computing, Quantum Computing and Distrubuted Systems."
-                            </p>
+                           <br><a href="https://ctftime.org/team/118341/"><b>Active member of V:HackaBoia (CTF Team)</b></a>
+			    </p>
                             <div class="hs-exp">
                                 <div class="exp-box">
                                     <h5>-</h5>
