--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="container">
                 <!-- Brand 
                 <a class="navbar-brand" href="">
-                    <img src="images/martin-logo-3.png" title="" alt="">
+                    <img src="images/" title="" alt="">
                 </a>-->
                 <!-- / -->
                 <!-- Mobile Toggle -->
