--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <div class="col-lg-5">
                         <div class="home-image">
                             <img src="images/alexmain.jpeg"  alt="">
-                        <!--     <figcaption>This isn't serious, but I think it is hillarious. If this was serious, I would be ready to hack the world.</figcaption>-->
+                        <!--     <figcaption>T.</figcaption>-->
                         </div>
                     </div>
                 </div>
@@ -272,8 +272,8 @@ My hobbies include electronic music and sports. I love taking long walks outdoor
                 <div class="row justify-content-center section-heading">
                     <div class="col-lg-15 text-center">
                         <h6><span class="text-theme">Pictures</span></h6>
-                        <h3>Pictures to Verify I am a Weirdo</h3>
-                        <p>Here is a collage of photos that help eludidate my eceletic personality.</p>
+                        <h3>P</h3>
+                        <p>H.</p>
                     </div>
                 </div>
                
