--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ My hobbies include electronic music and sports. I love taking long walks outdoor
                                 <h5>Relevant Courses</h5>
                                 <p> Data Structures<br>Advanced Software Engineering<br>Object Oriented Design<br>Operating Systems<br>Security And Protocols for Networking Systems<br>Computer Architecture and Design<br>Optimization Methods
                                     Machine Learning<br>Knowledge Engineering and Artificial Intelligence<br>Algorithms<br>Future Computing Architectures and Program Paradigms<br>High Perfomance Cloud Computing
-                                   <br>Quantum Computing<br>Distributed Systems<br>Data Mining<br>Blockchain<br>AWS Cloud Services</p>
+                                   <br>Quantum Computing<br>Distributed Systems<br>Data Mining<br>Blockchain<br>AWS Cloud Services<br>GitHub Advanced Security</p>
                                     
                             </div>
                         </div>
