--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ My hobbies include electronic music and sports. I love taking long walks outdoor
                             <div class="icon"><i class="bi bi-triangle"></i></div>
                             <div class="feature-content col">
                                 <h5>Project Management</h5>
-                                <p> SCRUM, UML,Maven, GitHub, Jupyter Notebooks, Kanban, Presentation Skills, Team Leadership/Management, Cross-Team Communication, Great Sense of Humor</p>
+                                <p> SCRUM, UML, GitHub, Presentation Skills, Team Leadership/Management, Cross-Team Communication, Great Sense of Humor</p>
                             </div>
                         </div>
                     </div>
