--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ My hobbies include electronic music and sports. I love taking long walks outdoor
   </div>
  <div class="media-element">
 <a href="https://github.com/MrAlexIV/pasm"> <!-- Specifica l'URL di destinazione -->
-<img src="images/pasm.png"  width="300" 
+<img src="images/pasm.PNG"  width="300" 
      height="300"/>  </a>    <p class="title">PASM: An Optimization of a business process</p>
   </div>
   <div class="media-element">
