--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ My hobbies include electronic music and sports. I love taking long walks outdoor
                                 <div class="row g-4">
                                     <div class="col-6">
                                         <h5>M.S. in Computer Engineering</h5>
-                                        <h6>Thesis</h6>
+                                        <h6>Thesis: Adversarial Attack Impact on LSTM Networks   for Time Series-Based Intrusion Detection </h6>
                                         <p>University of Campania Luigi Vanvitelli</p>
                                         <small>Expected Graduation Date: 2025</small>
                                     </div>
