--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ My hobbies include electronic music and sports. I love taking long walks outdoor
                             <div class="icon"><i class="bi bi-phone"></i></div>
                             <div class="feature-content col">
                                 <h5>Languages,Paradigms and Skills</h5>
-                                <p>Python, C++, Java, C, JavaScript, MySQL, SQL, Assemblyx86, HTML, CSS, JSON, MATLAB, VHDL, CUDA, MPI, OpenMp, Penetration Testing, Cloud, AWS Cloud Services</p>
+                                <p>Python, C++, Java, C, JavaScript, MySQL, SQL, Assemblyx86, HTML, CSS, JSON, MATLAB, VHDL, CUDA, MPI, OpenMp, Penetration Testing, Cloud, AWS Cloud Services, Nmap, Nessus, Burp Suite, Metasploit</p>
                             </div>
                         </div>
                     </div>
