--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			    </p>
                             <div class="hs-exp">
                                 <div class="exp-box">
-                                    <h5>1</h5>
+                                    <h5>1+</h5>
                                     <span>COMPUTER ENGINEERING:<br> YEARS OF EXPERIENCE</span>
                                 </div>
                                 <div class="exp-box">
@@ -147,17 +147,23 @@ My hobbies include electronic music and sports. I love taking long walks outdoor
                             <div class="about-row">
                                 <h3>Education</h3>
                                 <div class="row g-4">
+					<div class="col-6">
+                                        <h5>AI Software Engineer</h5>
+                                        <h6>Object Detection, Embedded Systems, Smart Roads </h6>
+                                        <p>South Engineering srl</p>
+                                        <small>Nov 2024 - Present</small>
+                                    </div>
                                     <div class="col-6">
                                         <h5>M.S. in Computer Engineering</h5>
-                                        <h6>Thesis: Adversarial Attack Impact on LSTM Networks   for Time Series-Based Intrusion Detection </h6>
+                                        <h6>Thesis: Adversarial Attack Impact on LSTM Networks for Time Series-Based Intrusion Detection </h6>
                                         <p>University of Campania Luigi Vanvitelli</p>
-                                        <small>Expected Graduation Date: 2025</small>
+                                        <small>Nov 2022 - Dec 2024</small>
                                     </div>
                                     <div class="col-6">
                                         <h5>B.S. in Computer Engineering</h5>
                                         <h6>Thesis: Design and Development of a Testbed for analyzing network attacks and Intrusion Detection Systems</h6>
                                         <p>University of Campania Luigi Vanvitelli</p>
-                                        <small>Nov 2022</small>
+                                        <small>Sep 2019 - Nov 2022</small>
                                     </div>
                                    
                                 </div>
