--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                     <div class="col-lg-7 pe-lg-5">
                         <div class="home-intro">
                             <h6>INTRODUCTION</h6>
-                            <h2>I'm Alessandro, a <span class="text-theme">Computer Engineering Student</span></h2>
-                            <p align="justify">"I have a master's degree in computer engineering at Università della Campania Luigi Vanvitelli. Throughout my studies, I have been focusing on Machine Learning, Artificial Intelligence, Cybersecurity, Software Development, Cloud, High Perfomance Computing, Quantum Computing and Distrubuted Systems."
+                            <h2>I'm Alessandro, a <span class="text-theme">Computer Engineer</span></h2>
+                            <p align="justify">"I am currently working as an AI Software Engineer. I have a master's degree in computer engineering at Università della Campania Luigi Vanvitelli. Throughout my studies, I have been focusing on Machine Learning, Artificial Intelligence, Cybersecurity, Software Development, Cloud, High Perfomance Computing, Quantum Computing and Distrubuted Systems."
                            <br><a href="https://ctftime.org/team/118341/"><b>Active member of V:HackaBoia (CTF Team)</b></a>
 			    </p>
                             <div class="hs-exp">
@@ -127,6 +127,12 @@ My hobbies include electronic music and sports. I love taking long walks outdoor
                             <div class="about-row">
                                 <h3>Experience</h3>
                                 <div class="row g-4">
+					<div class="col-6">
+                                        <h5>AI Software Engineer</h5>
+                                        <h6>Object Detection, Embedded Systems, Smart Roads </h6>
+                                        <p>South Engineering srl</p>
+                                        <small>Nov 2024 - Present</small>
+                                    </div>
                                     <div class="col-6">
                                         <h5>Academic Research</h5>
                                         <h6>Development of an AI Knowledge Base System for the
@@ -147,12 +153,6 @@ My hobbies include electronic music and sports. I love taking long walks outdoor
                             <div class="about-row">
                                 <h3>Education</h3>
                                 <div class="row g-4">
-					<div class="col-6">
-                                        <h5>AI Software Engineer</h5>
-                                        <h6>Object Detection, Embedded Systems, Smart Roads </h6>
-                                        <p>South Engineering srl</p>
-                                        <small>Nov 2024 - Present</small>
-                                    </div>
                                     <div class="col-6">
                                         <h5>M.S. in Computer Engineering</h5>
                                         <h6>Thesis: Adversarial Attack Impact on LSTM Networks for Time Series-Based Intrusion Detection </h6>
