--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ My hobbies include electronic music and sports. I love taking long walks outdoor
                                 <div class="row g-4">
 					<div class="col-6">
                                         <h5>AI Software Engineer</h5>
-                                        <h6>Object Detection, Embedded Systems, Smart Roads </h6>
+                                        <h6>Object Detection, Computer Vision, C-ITS, YOLO </h6>
                                         <p>South Engineering srl</p>
                                         <small>Nov 2024 - Present</small>
                                     </div>
@@ -156,6 +156,7 @@ My hobbies include electronic music and sports. I love taking long walks outdoor
                                     <div class="col-6">
                                         <h5>M.S. in Computer Engineering</h5>
                                         <h6>Thesis: Adversarial Attack Impact on LSTM Networks for Time Series-Based Intrusion Detection </h6>
+                                        <p>110/110 cum laude</p>
                                         <p>University of Campania Luigi Vanvitelli</p>
                                         <small>Nov 2022 - Dec 2024</small>
                                     </div>
