--- a/index.html
+++ b/index.html
@@ -246,6 +246,31 @@ My hobbies include electronic music and sports. I love taking long walks outdoor
             </div>
         </section>
         <!-- End Techincal Competencies Section -->
+	<!-- Publications Section -->
+<section data-scroll-index="7" class="section publications-section border-top-g">
+    <div class="container">
+        <div class="row justify-content-center section-heading">
+            <div class="col-lg-8 text-center">
+                <h6><span class="text-theme">Publications</span></h6>
+                <h3>Research Publications</h3>
+                <p>Here are some of the scientific and academic contributions I have made so far.</p>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-lg-10">
+                <div class="publication-item">
+                    <h5>Bridging the Safety Gap: A C-ITS Solution for Protecting Vulnerable Road Users</h5>
+                    <p><b>Authors:</b> Mario Fiorentino, Michele Caggiano, Alessandro Magliacane, Angelo Coppola, Andrea Marchetta</p>
+                    <p><b>Conference:</b> 2025 55th Annual IEEE/IFIP International Conference on Dependable Systems and Networks - Supplemental Volume (DSN-S)</p>
+                    <p><b>Date:</b> June 23-26, 2025 | <b>Location:</b> Naples, Italy</p>
+                    <p><b>DOI:</b> <a href="https://doi.org/10.1109/DSN-S65789.2025.00043" target="_blank">10.1109/DSN-S65789.2025.00043</a></p>
+                    <p><b>Abstract:</b> This paper proposes a C-ITS Platform for the Safeguarding of Vulnerable Road Users using camera-equipped RoadSide Units (RSUs), vehicle On-Board Units (OBUs), and Virtual-OBUs. The SALVM system is tested in a co-simulation HIL environment to detect imminent danger and send real-time notifications.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- End Publications Section -->
         <!-- Highlights Section -->
         <section data-scroll-index="3" class="section work-section border-top-g">
             <div class="container">
