--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                         <li><a class="nav-link" data-scroll-nav="4" href="portfolio"><span>Portfolio</span></a></li>
                        <!--  <li><a class="nav-link" data-scroll-nav="5" href="pictures"><span>Pictures</span></a></li>-->
                         <li><a class="nav-link" data-scroll-nav="6" href="certificates"><span>Certficates</span></a></li>
+			<li><a class="nav-link" data-scroll-nav="7" href="publications"><span>Publications</span></a></li>
                     </ul>
                 </div>
                 <!-- / -->
@@ -79,7 +80,11 @@
                                     <h5>5</h5>
                                     <span>PROJECTS<br> COMPLETED</span>
                                 </div>
-                       
+				<div class="exp-box">
+				        <h5>1</h5>
+				        <span>PUBLICATION<br> PUBLISHED</span>
+				    </div>
+
                             </div>
                             <div class="btn-bar">
                                 <a class="link-effect" data-scroll-nav="1" href="#about">Browse Experience <i class="bi bi-arrow-up-right"></i></a>
