--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
                         <li><a class="nav-link" data-scroll-nav="0" href="home"><span>Home</span></a></li>
                         <li><a class="nav-link" data-scroll-nav="1" href="about"><span>About</span></a></li>
                         <li><a class="nav-link" data-scroll-nav="2" href="skills"><span>Skills</span></a></li>
+			<li><a class="nav-link" data-scroll-nav="7" href="#publications"><span>Publications</span></a></li>
                         <li><a class="nav-link" data-scroll-nav="3" href="Highlights"><span>Highlights</span></a></li>
                         <li><a class="nav-link" data-scroll-nav="4" href="portfolio"><span>Portfolio</span></a></li>
                        <!--  <li><a class="nav-link" data-scroll-nav="5" href="pictures"><span>Pictures</span></a></li>-->
                         <li><a class="nav-link" data-scroll-nav="6" href="certificates"><span>Certficates</span></a></li>
-			<li><a class="nav-link" data-scroll-nav="7" href="publications"><span>Publications</span></a></li>
                     </ul>
                 </div>
                 <!-- / -->
@@ -82,7 +82,7 @@
                                 </div>
 				<div class="exp-box">
 				        <h5>1</h5>
-				        <span>PUBLICATION<br> PUBLISHED</span>
+				        <span>PUBLICATIONS<br> PUBLISHED</span>
 				    </div>
 
                             </div>
@@ -252,7 +252,7 @@ My hobbies include electronic music and sports. I love taking long walks outdoor
         </section>
         <!-- End Techincal Competencies Section -->
 	<!-- Publications Section -->
-<section data-scroll-index="7" class="section publications-section border-top-g">
+<section id="publications" data-scroll-index="7" class="section publications-section border-top-g">
     <div class="container">
         <div class="row justify-content-center section-heading">
             <div class="col-lg-8 text-center">
