--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <li><a class="nav-link" data-scroll-nav="0" href="home"><span>Home</span></a></li>
                         <li><a class="nav-link" data-scroll-nav="1" href="about"><span>About</span></a></li>
                         <li><a class="nav-link" data-scroll-nav="2" href="skills"><span>Skills</span></a></li>
-			<li><a class="nav-link" data-scroll-nav="7" href="#publications"><span>Publications</span></a></li>
+			<li><a class="nav-link" href="#publications"><span>Publications</span></a></li
                         <li><a class="nav-link" data-scroll-nav="3" href="Highlights"><span>Highlights</span></a></li>
                         <li><a class="nav-link" data-scroll-nav="4" href="portfolio"><span>Portfolio</span></a></li>
                        <!--  <li><a class="nav-link" data-scroll-nav="5" href="pictures"><span>Pictures</span></a></li>-->
