--- a/index.html
+++ b/index.html
@@ -158,9 +158,7 @@
                         <div class="about-text">
                             <div class="about-row">
                                 <h3>Biography</h3>
-                                <p align="justify"> Born in Aversa(Italy) on April 4, 2000. Graduated with honors from a technical institute in 2019 and then began my studies in computer engineering.
-Bachelor's degree in 2022 and Master's degree with specialization in Cloud,Distributed and Intelligent Systems at the University of Campania Luigi Vanvitelli in 2025. Passionate about cybersecurity and artificial intelligence.
-My hobbies include electronic music and sports. I love taking long walks outdoors and traveling, especially attending those amazing festivals where I can meet people from all over the world. 
+                                <p align="justify"> Born in Aversa (Italy) on April 4, 2000. Graduated with honors from a technical institute in 2019, then began my studies in Computer Engineering. Obtained a Bachelor's degree in 2022, followed by a Master's degree with honors in 2025, specializing in Cloud, Distributed, and Intelligent Systems at the University of Campania Luigi Vanvitelli. Passionate about cybersecurity and artificial intelligence. My hobbies include electronic music and sports. I love taking long walks outdoors and traveling, especially attending those amazing festivals where I can meet people from all over the world.
 
 </p>
                             </div>
