--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                                     <div class="publication-item">
                                         <h5>An AI knowledge base system for the recognition and personalised treatment of SARS-CoV-2</h5>
                                         <p><b>Authors:</b> Beniamino Di Martino, Gennaro Junior Pezzullo, Alessandro Magliacane, Hung-Wei Li, Meng-Yen Hsieh</p>
-                                        <p><b>Journal:</b> Int. J. of Engineering Systems Modelling and Simulation</p>
+                                        <p><b>Journal:</b> International Journal of Embedded Systems</p>
                                         <p><b>Keywords:</b> semantic; ontology; e-health; expert system.</p>
                                         <p><b>DOI:</b> <a href="https://doi.org/10.1504/IJES.2025.10073047" target="_blank">10.1504/IJES.2025.10073047</a></p>
                                         <p><b>Abstract:</b> The work described aimed to develop an expert system for personalised recognition and treatment of SARS-CoV-2. A clear methodology was defined, supported by conceptual diagrams to outline the logical flow of the problem and proposed solutions. This methodology is based on key components: a Bayesian network to calculate the probability of infection by analysing the patients symptoms, contacts, and geographic context; and a semantic component to determine the most appropriate treatment using the patients clinical and personal information, such as allergies or individual risk factors.</p>
@@ -391,14 +391,6 @@
                             <img src="images/pasm.PNG" alt="PASM Business Process Optimization">
                             <div class="card-body">
                                 <h5 class="card-title">PASM: Business Process Optimization</h5>
-                            </div>
-                        </a>
-                    </div>
-
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <a href="#" class="project-card"> <img src="images/jour.png" alt="AI Knowledge Base for SARS-CoV-2">
-                            <div class="card-body">
-                                <h5 class="card-title">AI for SARS-CoV-2 Recognition</h5>
                             </div>
                         </a>
                     </div>
