--- a/index.html
+++ b/index.html
@@ -426,6 +426,15 @@
                         <p>See my <a href="https://github.com/MrAlexIV">GitHub</a> for actual details on the following projects. This is also most likely not up to date like most personal websites.</p>
                     </div>
                 </div>
+                  <div class="row g-4 justify-content-center">
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <a href="https://salvm.southengineering.it/" target="_blank" class="project-card">
+                            <img src="images/salvm" alt="SALVM">
+                            <div class="card-body">
+                                <h5 class="card-title">SALVM</h5>
+                            </div>
+                        </a>
+                    </div>
                 <div class="row g-4 justify-content-center">
                     <div class="col-12 col-md-6 col-lg-4">
                         <a href="https://github.com/MrAlexIV/SatelliteAttitudeControl" target="_blank" class="project-card">
