Fix image source for SALVM project card

--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                   <div class="row g-4 justify-content-center">
                     <div class="col-12 col-md-6 col-lg-4">
                         <a href="https://salvm.southengineering.it/" target="_blank" class="project-card">
-                            <img src="images/salvm" alt="SALVM">
+                            <img src="images/salvm.png" alt="SALVM">
                             <div class="card-body">
                                 <h5 class="card-title">SALVM</h5>
                             </div>
